Fix navigation bar madness so it works properly on mobile

--- a/docs/assets/common.css
+++ b/docs/assets/common.css
@@ -32,7 +32,7 @@
 	--equation-color: #ebc3e4;
 }
 body {
-    margin-top: 40px;
+    margin-top: 0;
     color: var(--font-color);
     background-color: var(--bg-color);
     font-size: 18px;
@@ -203,38 +203,48 @@ span.no-mjx-color mjx-container {
 }
 div.headbar {
     padding: 0px;
+    margin: 0;
     background-color: var(--navbar-color);
     border-radius: 5px;
     display: block;
     width: 100%;
-    height: 30px;
-    position: fixed;
+    min-height: 25px;
+    height: auto;
+    position: sticky;
+    z-index: 1000;
     top: 0;
     left: 0;
 }
 div.headbar ul
 {
     display: flex;
+    flex-wrap: wrap;
+    height: auto;
     flex-direction: row;
     align-items: center;
     justify-content: left;
     gap: 8px;
     margin: 0;
     padding: 0;
-    height: 30px;
+    height: auto;
+    /*height: 30px;*/
 }
 div.headbar li {
     display: block;
     margin: 0;
     padding: 0;
-    height: 20px;
+    height: 100%;
+    max-height: 60px; !important
+    /*height: 20px;*/
 }
 div.headbar li.headbar-spacer {
-    flex-grow: 1;
+    /* flex-grow: 1; */
+    flex: 0 1 auto;
+    min-width: 0;
+    height: auto;
 }
 div.headbar li.headbar-button {
     padding: 0px 0px 0px 0px;
-    height: 100%;
     margin: 0;
     border-radius: 5px;
     cursor: pointer;
@@ -257,16 +267,16 @@ div.headbar li.headbar-shiny {
 li.headbar-button img {
     display: block;
     padding: 0px 5px 0px 2px;
+    margin: auto;
     margin-left: 0;
     margin-right: 0;
-    height: 26px;
+    /*height: 26px;*/
 }
 li.headbar-button a:link,
 li.headbar-button a:visited,
 li.headbar-button a:hover {
-    padding: 0px 5px 0px 5px;
+    padding: 5px 5px 5px 5px;
     margin: 0;
-    height: 100%;
     width: 100%;
     display: flex;
     justify-content: center;
